force-app/main/default/objects/LeadLogValidDetail__c/LeadLogValidDetail__c.object-meta.xml
<CustomObject>
    <label>LeadLogValidDetail</label>
    <nameField>
        <displayFormat>validId-{0000}</displayFormat>
        <label>LeadLogValid Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeadLogValidsDetail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>