force-app/main/default/objects/LeadLogValidDetail__c/fields/BranchedReferred__c.field-meta.xml
<CustomField>
    <fullName>BranchedReferred__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BranchedReferred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>