force-app/main/default/objects/LeadLogValidDetail__c/fields/BranchedReferredName__c.field-meta.xml
<CustomField>
    <fullName>BranchedReferredName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BranchedReferredName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>