force-app/main/default/objects/LeadLogValidDetail__c/fields/ContactFirstname__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactFirstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>