force-app/main/default/objects/LeadLogValidDetail__c/fields/ContactLastname__c.field-meta.xml
<CustomField>
    <fullName>ContactLastname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactLastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>