force-app/main/default/objects/LeadLogValidDetail__c/fields/ContactPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactPhoneNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactPhoneNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>