force-app/main/default/objects/LeadLogValidDetail__c/fields/ContactPosition__c.field-meta.xml
<CustomField>
    <fullName>ContactPosition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactPosition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>