force-app/main/default/objects/LeadLogValidDetail__c/fields/ContactTitle__c.field-meta.xml
<CustomField>
    <fullName>ContactTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>