force-app/main/default/objects/LeadLogValidDetail__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>