force-app/main/default/objects/LeadLogValidDetail__c/fields/CustomerNameEN__c.field-meta.xml
<CustomField>
    <fullName>CustomerNameEN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CustomerNameEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>