force-app/main/default/objects/LeadLogValidDetail__c/fields/DecisionMap__c.field-meta.xml
<CustomField>
    <fullName>DecisionMap__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DecisionMap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>