force-app/main/default/objects/LeadLogValidDetail__c/fields/Errormessage__c.field-meta.xml
<CustomField>
    <fullName>Errormessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Errormessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>