force-app/main/default/objects/LeadLogValidDetail__c/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>