force-app/main/default/objects/LeadLogValidDetail__c/fields/filename__c.field-meta.xml
<CustomField>
    <fullName>filename__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>