force-app/main/default/objects/LeadLogValidDetail__c/fields/Groupname2__c.field-meta.xml
<CustomField>
    <fullName>Groupname2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Groupname2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>