force-app/main/default/objects/LeadLogValidDetail__c/fields/Groupname__c.field-meta.xml
<CustomField>
    <fullName>Groupname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Groupname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>