force-app/main/default/objects/LeadLogValidDetail__c/fields/IDNumber__c.field-meta.xml
<CustomField>
    <fullName>IDNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>