force-app/main/default/objects/LeadLogValidDetail__c/fields/IDType__c.field-meta.xml
<CustomField>
    <fullName>IDType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>