force-app/main/default/objects/LeadLogValidDetail__c/fields/IndustryName__c.field-meta.xml
<CustomField>
    <fullName>IndustryName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IndustryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>