force-app/main/default/objects/LeadLogValidDetail__c/fields/LeadLogValidHeader__c.field-meta.xml
<CustomField>
    <fullName>LeadLogValidHeader__c</fullName>
    <label>LeadLogValidHeader</label>
    <referenceTo>LeadLogValidHeader__c</referenceTo>
    <relationshipLabel>LeadLogValidsDetail</relationshipLabel>
    <relationshipName>LeadLogValidsDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>