force-app/main/default/objects/LeadLogValidDetail__c/fields/leadOwner__c.field-meta.xml
<CustomField>
    <fullName>leadOwner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>leadOwner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>