force-app/main/default/objects/LeadLogValidDetail__c/fields/LeadOwnerExceptionFlag__c.field-meta.xml
<CustomField>
    <fullName>LeadOwnerExceptionFlag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LeadOwnerExceptionFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>