force-app/main/default/objects/LeadLogValidDetail__c/fields/leadOwnerName__c.field-meta.xml
<CustomField>
    <fullName>leadOwnerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>leadOwnerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>