force-app/main/default/objects/LeadLogValidDetail__c/fields/LeadRecordtypeId__c.field-meta.xml
<CustomField>
    <fullName>LeadRecordtypeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LeadRecordtypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>