force-app/main/default/objects/LeadLogValidDetail__c/fields/LeadRecordtypeName__c.field-meta.xml
<CustomField>
    <fullName>LeadRecordtypeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LeadRecordtypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>