force-app/main/default/objects/LeadLogValidDetail__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LeadSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>