force-app/main/default/objects/LeadLogValidDetail__c/fields/LinktoCustomer__c.field-meta.xml
<CustomField>
    <fullName>LinktoCustomer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LinktoCustomer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>