force-app/main/default/objects/LeadLogValidDetail__c/fields/LinktoCustomerName__c.field-meta.xml
<CustomField>
    <fullName>LinktoCustomerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LinktoCustomerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>