force-app/main/default/objects/LeadLogValidDetail__c/fields/MobileNo__c.field-meta.xml
<CustomField>
    <fullName>MobileNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MobileNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>