force-app/main/default/objects/LeadLogValidDetail__c/fields/NoOfyears__c.field-meta.xml
<CustomField>
    <fullName>NoOfyears__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NoOfyears</label>
    <length>255</length>
    <type>Text</type>
</CustomField>