force-app/main/default/objects/LeadLogValidDetail__c/fields/OfficeNo__c.field-meta.xml
<CustomField>
    <fullName>OfficeNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OfficeNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>