force-app/main/default/objects/LeadLogValidDetail__c/fields/OtherSource__c.field-meta.xml
<CustomField>
    <fullName>OtherSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OtherSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>