force-app/main/default/objects/LeadLogValidDetail__c/fields/Prescreen__c.field-meta.xml
<CustomField>
    <fullName>Prescreen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prescreen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>