force-app/main/default/objects/LeadLogValidDetail__c/fields/PrimaryCampaign__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCampaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PrimaryCampaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>