force-app/main/default/objects/LeadLogValidDetail__c/fields/PrimaryCampaignName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCampaignName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PrimaryCampaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>