force-app/main/default/objects/LeadLogValidDetail__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>