force-app/main/default/objects/LeadLogValidDetail__c/fields/ReferralStaffID__c.field-meta.xml
<CustomField>
    <fullName>ReferralStaffID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ReferralStaffID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>