force-app/main/default/objects/LeadLogValidDetail__c/fields/ReferralStaffName__c.field-meta.xml
<CustomField>
    <fullName>ReferralStaffName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ReferralStaffName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>