force-app/main/default/objects/LeadLogValidDetail__c/fields/SalesAmountperyear__c.field-meta.xml
<CustomField>
    <fullName>SalesAmountperyear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesAmountperyear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>