force-app/main/default/objects/LeadLogValidDetail__c/fields/SubDistrict__c.field-meta.xml
<CustomField>
    <fullName>SubDistrict__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SubDistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>