force-app/main/default/objects/LeadLogValidDetail__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Success</label>
    <length>255</length>
    <type>Text</type>
</CustomField>