force-app/main/default/objects/LeadLogValidDetail__c/fields/TotalExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalExpectedRevenue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TotalExpectedRevenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>