force-app/main/default/objects/LeadLogValidDetail__c/fields/Warning_Flag__c.field-meta.xml
<CustomField>
    <fullName>Warning_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warning Flag</label>
    <type>Checkbox</type>
</CustomField>